Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-24593

Additional configuration keys disappear if project resolving fails

XMLWordPrintable

    • fc411cd0d1806435a9c89e8a10cdfed012663fd9 (qt-creator/qt-creator/master)

      • Open CMake project in QtCreator which requires additional -D flags in order to be resolved successfully
      • Set these values by clicking Add... in the "build settings pane" but make a mistake so that project resolving fails again
      • All values just entered disappear

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            cadam Cristian Adam
            rweickelt Richard Weickelt
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes