src/plugins/cmakeprojectmanager/fileapireader.h
@@ -89,6 +89,7 @@ private:
     void cmakeFinishedState(int code, QProcess::ExitStatus status);
 
     void replyDirectoryHasChanged(const QString &directory) const;
+    void makeBackupConfiguration(bool store);
 
     std::unique_ptr<CMakeProcess> m_cmakeProcess;
 
